# prthg-cs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  prthg-cs.csproj  prthg-cs.sln  prthgcs.csproj  run-cppport-helper.ps1
src/cppport/: CryptographyFunctions.cc  CryptographyFunctions.h
src/prthgcs/: CoreConfig.cs  Global.cs  Using.cs  prthgcs.cs  prthgcs.csproj
src/prthgcs.test/: UnitTest1.cs  prthgcs.test.csproj
src/prthgcs/classes/: Cryptography.cs  Utility.cs
src/prthgcs/enums/: LanguageEnums.cs  StatusEnums.cs
test/: UnitTest1.cs  Usings.cs  test.csproj
test/cryptography/: UnitTest1.cs  test.cryptography.csproj
